--- a/04 Device Access/Cordova/smartSammlerCordova/src/index.html
+++ b/04 Device Access/Cordova/smartSammlerCordova/src/index.html
@@ -10,10 +10,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+
+  <!-- Cordova Reference -> Produces err when cordova is not present -->
+  <!-- <script type="text/javascript" src="cordova.js"></script> -->
 </head>
 
 <body>
